fixed alignment for xs class in info tab (for "Style sheet")
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@10865 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common.css
+++ b/styles/common.css
@@ -2091,7 +2091,7 @@ input[type=checkbox] { display: none; }
 #calendar_container { padding: 0; }
 
 #div_info table { overflow: visible; }
-#div_info table .label, #div_info table .propLabelI { float: left; /*width: 200px;*/ overflow: visible; }
+#div_info table .label, #div_info table .propLabelI, #div_info table .xs { float: left; /*width: 200px;*/ overflow: visible; }
 #div_info td { white-space: nowrap; padding-right: 5px; overflow: visible; text-align: right; }
 #div_info td.pGr { text-align: center; }
 
